# test-matsuzawa-20251217-4

./: pyproject.toml
.research/: research_history.json
.research/results/: stderr.txt  stdout.txt
.research/results/comparative-1-resnet20-alpaca/: metrics.json  training_metrics.json
.research/results/comparison/: aggregated_metrics.json
.research/results/proposed-resnet20-alpaca/: metrics.json  training_metrics.json
config/: config.yaml
config/runs/: comparative-1-resnet20-alpaca.yaml  proposed-resnet20-alpaca.yaml
src/: evaluate.py  main.py  model.py  preprocess.py  train.py
