[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "d-radam-experiment"
version = "0.1.0"
description = "Dimensionality-Aware Rectified Adam (D-RAdam) - Validation and Benchmarking"
requires-python = ">=3.9"
dependencies = [
    "hydra-core>=1.3.0",
    "wandb>=0.15.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "optuna>=3.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "Pillow>=9.5.0",
    "tqdm>=4.65.0",
    "omegaconf>=2.3.0",
]

[project.optional-dependencies]
dev = ["black", "isort", "flake8"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
